# UBY-Specification

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  README.md  UBY-TLS-WD-0.1.0-CN.md  UBY-TLS-WD-0.1.0.md  UBY-Time-Python-Reference-Implementation-Development-Guide-WD-0.1.0.md  upload_to_github.bat  upload_to_github.ps1
uby-time/: .gitignore  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  GITHUB_REPOSITORY_CHECKLIST.md  LICENSE  PYPI_RELEASE_GUIDE.md  README.md  TESTPYPI_RELEASE_GUIDE.md  check_new_datasets.py  count_lines.py  discover_signals.py  merge_new_datasets.py  mkdocs.yml  pyproject.toml  test_functionality.py
uby-time/docs/: api-reference.md  cli.md  index.md  interoperability.md  precision.md  quickstart.md  release.md  scientific-discovery-use-case.md
uby-time/examples/: _check_zenodo_status.py  _create_new_version.py  _delete_all_files.py  _inspect_deposition.py  _plan_zenodo_update.py  _reset_upload_state.py  _sync_upload_state.py  analyze_end_ordovician_sampling_controls.py  analyze_end_ordovician_signal.py  annotate_external_databases.py  annotate_external_records.py  annotate_ics_chart.py  annotate_nasa_exoplanet_archive.py  annotate_nasa_jpl_cneos_fireballs.py  annotate_pbdb_animalia_phanerozoic.py  annotate_pbdb_collections_animalia_phanerozoic.py  annotate_pbdb_dinosauria.py  annotate_simbad_high_redshift_objects.py  basic_usage.py  benchmark_usgs_earthquake_annotation.py  build_forcing_event_compilation.py  build_forcing_extinction_leadlag.py  build_mass_extinction_lag_dataset.py  build_pbdb_extinction_dynamics.py  build_unified_timeline_db.py  build_unified_timeline_db_streaming.py  build_zenodo_release_package.py  download_external_databases.py  download_pbdb_animalia_phanerozoic_all.py  download_pbdb_collections_animalia_phanerozoic.py  mine_cross_scale_extinction_forcing.py  mine_cross_scale_lip_extinction_periodicity.py  mine_cross_scale_precision_law.py  mine_mass_extinction_periodicity.py  mine_milankovitch_orbital_signal.py  mine_modern_climate_attribution.py  mine_modern_co2_rate_uniqueness.py  mine_paleoclimate_multisource.py  mine_phanerozoic_diversity_signal.py  (+9 more)
(+71 files in other folders)
